--- a/rot13/app.yaml
+++ b/rot13/app.yaml
@@ -1,4 +1,4 @@
-application: lessonsite-1063
+application: rot13
 version: 1
 runtime: python27
 api_version: 1
@@ -7,8 +7,6 @@ threadsafe: true
 handlers:
 - url: /css
   static_dir: css
-- url: /.*
-  script: lessonsite.app
 
 libraries:
 - name: webapp2
